fix: modify spring security filter with external provider